welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: missing arguments for method parotTrouble in class parotTrouble;
follow this method with `_' if you want to treat it as a partially applied function
  if (parotTrouble == true && hour > 20 || parotTrouble == true && hour < 7){
      ^parotTrouble:2: error: missing arguments for method parotTrouble in class parotTrouble;
follow this method with `_' if you want to treat it as a partially applied function
  if (parotTrouble == true && hour > 20 || parotTrouble == true && hour < 7){
                                           ^