welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (parotTrouble == true && hour > 20 || parotTrouble == true && hour < 7){
    return true
  }
  return false
}